[gd_scene load_steps=9 format=3 uid="uid://b1bqb782nc6su"]

[ext_resource type="Theme" uid="uid://b8u4odj3rruh3" path="res://core/Resources/Themes/DefaultTheme.tres" id="1_4wrtj"]
[ext_resource type="Script" path="res://editor/Core/RootEditor.gd" id="1_yrs6b"]
[ext_resource type="Texture2D" uid="uid://fkl1x8ncsj7" path="res://editor/Assets/background.png" id="2_2v7fk"]
[ext_resource type="Script" path="res://editor/Core/PluginManager.gd" id="2_ca4pa"]
[ext_resource type="PackedScene" uid="uid://b0whxetw2nttx" path="res://editor/Core/Panels/LibraryPanel.tscn" id="3_f5d5d"]
[ext_resource type="Script" path="res://editor/Core/Preview.gd" id="4_pnu73"]
[ext_resource type="PackedScene" uid="uid://6tgj005nu8nn" path="res://editor/Core/Panels/LoopTrackPanel.tscn" id="5_rmhpb"]

[sub_resource type="GDScript" id="GDScript_701t8"]
script/source = "extends PanelContainer

class_name LoopPanel
"

[node name="RootEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4wrtj")
script = ExtResource("1_yrs6b")

[node name="PluginManager" type="Node" parent="." node_paths=PackedStringArray("root_editor")]
unique_name_in_owner = true
script = ExtResource("2_ca4pa")
root_editor = NodePath("..")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2v7fk")
expand_mode = 1
stretch_mode = 6

[node name="UIRoot" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="PanelContainer" parent="UIRoot"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UIRoot/TopPanel"]
layout_mode = 2

[node name="LoopsLibraryButton" type="Button" parent="UIRoot/TopPanel/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Library "

[node name="SettingsButton" type="Button" parent="UIRoot/TopPanel/HBoxContainer"]
layout_mode = 2
text = "settings"

[node name="HSplitContainer" type="HSplitContainer" parent="UIRoot"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
theme_override_constants/minimum_grab_thickness = 0
theme_override_constants/autohide = 0

[node name="LoopPanel" parent="UIRoot/HSplitContainer" instance=ExtResource("3_f5d5d")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
script = SubResource("GDScript_701t8")

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelPreview" type="CenterContainer" parent="UIRoot/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="UIRoot/HSplitContainer/VBoxContainer/PanelPreview"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="UIRoot/HSplitContainer/VBoxContainer/PanelPreview/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(576, 324)
render_target_update_mode = 4

[node name="Preview" type="Node2D" parent="UIRoot/HSplitContainer/VBoxContainer/PanelPreview/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("4_pnu73")

[node name="CanvasLayer" type="CanvasLayer" parent="UIRoot/HSplitContainer/VBoxContainer/PanelPreview/SubViewportContainer/SubViewport/Preview"]
layer = -1

[node name="Camera2D" type="Camera2D" parent="UIRoot/HSplitContainer/VBoxContainer/PanelPreview/SubViewportContainer/SubViewport/Preview"]

[node name="TrackPanel" parent="UIRoot/HSplitContainer/VBoxContainer" instance=ExtResource("5_rmhpb")]
layout_mode = 2

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true

[connection signal="toggled" from="UIRoot/TopPanel/HBoxContainer/LoopsLibraryButton" to="." method="_on_loops_libary_button_toggled"]
[connection signal="pressed" from="UIRoot/TopPanel/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
